kubernetes/apps/bookstack/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: apps
spec:
  selector:
    app: bookstack
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
