kubernetes/apps/bookstack/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: tinyauth-tinyauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: bookstack.taptappers.club
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack
            port:
              number: 8080
  tls:
  - hosts:
    - bookstack.taptappers.club
    secretName: bookstack-tls-secret
